--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 *.lock
-source/.vs/*
-source/Common/obj/*
 *.pdb
-.vs/OverWeightControl/v15/.suo
+*.cashe
 bin/*
+source/.vs/*
+.vs/OverWeightControl/v15/.suo
+source/Common/obj/*
+source/Common.Tests/obj/*
+source/Core/obj/*
+source/ConsoleService/obj/*
+source/SettingsService/obj/*
+source/FileTransferManager.Client/obj/*
+source/FileTransferManager.Server/obj/*
+source/OverWeightControl/obj/*
