--- a/source/OverWeightControl/OverWeightControl.csproj
+++ b/source/OverWeightControl/OverWeightControl.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Class1.cs" />
     <Compile Include="CompositionRoot.cs" />
     <Compile Include="Dependency.cs" />
+    <Compile Include="PackageAdmining.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PackageAdmining.Designer.cs">
+      <DependentUpon>PackageAdmining.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SenderFiles.cs" />
     <Compile Include="Starter.cs" />
@@ -106,6 +112,11 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="PackageAdmining.resx">
+      <DependentUpon>PackageAdmining.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
