--- a/source/OverWeightControl/OverWeightControl.csproj
+++ b/source/OverWeightControl/OverWeightControl.csproj
@@ -33,7 +33,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>OverWeightControl.Class1</StartupObject>
+    <StartupObject>OverWeightControl.Starter</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonServiceLocator, Version=2.0.3.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
@@ -74,7 +74,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="CompositionRoot.cs" />
     <Compile Include="Dependency.cs" />
     <Compile Include="DependencyListControl.cs">
@@ -90,6 +89,7 @@
       <DependentUpon>PackageAdmining.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Roles.cs" />
     <Compile Include="SenderFiles.cs" />
     <Compile Include="Starter.cs" />
   </ItemGroup>
