--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ source/FileTransferManager.Client/obj/*
 source/FileTransferManager.Server/obj/*
 source/OverWeightControl/obj/*
 source/ClienActsUI/obj/*
+source/ParrentUI/obj/*
