--- a/source/Common/Common.csproj
+++ b/source/Common/Common.csproj
@@ -68,6 +68,7 @@
     <Compile Include="RawData\RawVehicleInfo.cs" />
     <Compile Include="RawData\RawWeighterInfo.cs" />
     <Compile Include="RawData\RecognizedValue.cs" />
+    <Compile Include="Serialization\ModelContext.cs" />
     <Compile Include="Serialization\IJsonSerialization.cs" />
     <Compile Include="Serialization\ParentBehavior.cs" />
   </ItemGroup>
