Common.Model: Edit constructor. i. #11

--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -116,6 +116,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{13a5cd30-2449-463b-817e-2c23fa8b9ae1}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
