Common.BelModel. update i. #14

--- a/source/Common.Tests/Common.Tests.csproj
+++ b/source/Common.Tests/Common.Tests.csproj
@@ -71,6 +71,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common.BelModel\Common.BelModel.csproj">
+      <Project>{B0553610-1D34-4A94-9AC1-FE0B3B6A4FDB}</Project>
+      <Name>Common.BelModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{13a5cd30-2449-463b-817e-2c23fa8b9ae1}</Project>
       <Name>Common</Name>
