--- a/source/ClienActsUI/ActsUI.csproj
+++ b/source/ClienActsUI/ActsUI.csproj
@@ -34,7 +34,14 @@
     <Reference Include="CommonServiceLocator, Version=2.0.3.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.5.8.6\lib\net46\CommonServiceLocator.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
@@ -99,6 +106,12 @@
       <DependentUpon>DriverControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidatioinControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ValidatioinControl.Designer.cs">
+      <DependentUpon>ValidatioinControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="VehicleControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -134,6 +147,9 @@
     <EmbeddedResource Include="DriverControl.resx">
       <DependentUpon>DriverControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ValidatioinControl.resx">
+      <DependentUpon>ValidatioinControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VehicleControl.resx">
       <DependentUpon>VehicleControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -155,6 +171,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
