--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Clients\Roles.cs" />
     <Compile Include="FileTransfer\BackUpFiles.cs" />
     <Compile Include="FileTransfer\DeleteFiles.cs" />
+    <Compile Include="FileTransfer\RecognitionServer\JsonReadFiles.cs" />
     <Compile Include="FileTransfer\Server\RecivingFiles.cs" />
     <Compile Include="FileTransfer\Server\SaveForAfcFiles.cs" />
     <Compile Include="FileTransfer\WorkFlow\IWorkflowStatistic.cs" />
