Core.RI: updated.
Тут добавлена особая фича, своего пошива.

--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -93,6 +93,7 @@
     <Compile Include="RemoteInteraction\SendResult.cs" />
     <Compile Include="RemoteInteraction\UnityInstanceProvider.cs" />
     <Compile Include="RemoteInteraction\UnityServiceBehavior.cs" />
+    <Compile Include="RemoteInteraction\UnityServiceHost.cs" />
     <Compile Include="RemoteInteraction\UnityServiceHostFactory.cs" />
     <Compile Include="Unity\DecoratorBuildStrategy.cs" />
     <Compile Include="Unity\DecoratorContainerExtension.cs" />
