--- a/source/OverWeightControl.Runer/OverWeightControl.Runer.csproj
+++ b/source/OverWeightControl.Runer/OverWeightControl.Runer.csproj
@@ -32,6 +32,9 @@
   <PropertyGroup>
     <StartupObject>OverWeightControl.Runer.Run</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Transport-Truck-icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,6 +58,9 @@
       <Project>{28756945-bf3d-47ae-bb20-c577fab5980d}</Project>
       <Name>Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Transport-Truck-icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
