Core: add WorkflowChainsDescription to project file.

--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -88,6 +88,7 @@
     <Compile Include="FileTransfer\RecognitionServer\JsonReadFiles.cs" />
     <Compile Include="FileTransfer\Server\RecivingFiles.cs" />
     <Compile Include="FileTransfer\Server\SaveForAfcFiles.cs" />
+    <Compile Include="FileTransfer\WorkFlow\WorkflowChainsDescriptions.cs" />
     <Compile Include="ModelContext.cs" />
     <Compile Include="RemoteInteraction\Host.cs" />
     <Compile Include="RemoteInteraction\Proxy.cs" />
