--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="Clients\Roles.cs" />
     <Compile Include="FileTransfer\BackUpFiles.cs" />
+    <Compile Include="FileTransfer\WorkFlow\WorkflowChainDescription.cs" />
     <Compile Include="FileTransfer\FinalizeFiles.cs" />
     <Compile Include="FileTransfer\DeleteFiles.cs" />
     <Compile Include="FileTransfer\RecognitionServer\JsonReadFiles.cs" />
