--- a/source/Core/Core.csproj
+++ b/source/Core/Core.csproj
@@ -82,6 +82,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clients\Roles.cs" />
+    <Compile Include="Console\ConsoleMessage.cs" />
+    <Compile Include="Console\ConsoleMessageType.cs" />
     <Compile Include="FileTransfer\BackUpFiles.cs" />
     <Compile Include="FileTransfer\WorkFlow\WorkflowChainDescription.cs" />
     <Compile Include="FileTransfer\FinalizeFiles.cs" />
