--- a/source/ClienActsUI/ActsUI.csproj
+++ b/source/ClienActsUI/ActsUI.csproj
@@ -40,6 +40,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -110,6 +113,12 @@
     <Compile Include="Database\ActGridControl.Designer.cs">
       <DependentUpon>ActGridControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Database\ChosingColumnsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Database\ChosingColumnsForm.Designer.cs">
+      <DependentUpon>ChosingColumnsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataLoader.cs" />
     <Compile Include="DriverControl.cs">
       <SubType>UserControl</SubType>
@@ -167,6 +176,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Database\ActGridControl.resx">
       <DependentUpon>ActGridControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Database\ChosingColumnsForm.resx">
+      <DependentUpon>ChosingColumnsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DriverControl.resx">
       <DependentUpon>DriverControl.cs</DependentUpon>
