--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 *.pdb
 *.cashe
 *.log
+*.json
+*.mdf
+*.ldf
 bin/*.xml
 bin/*.txt
 bin/*.cfg
@@ -28,4 +31,3 @@ source/ClienActsUI/obj/*
 source/ParrentUI/obj/*
 source/Core.RemoteInteraction/obj/*
 source/Core.RemoteInteraction.Tests/obj/*
-*.json
