UI: Large job at filters.

--- a/source/ClienActsUI/ActsUI.csproj
+++ b/source/ClienActsUI/ActsUI.csproj
@@ -130,6 +130,8 @@
     <Compile Include="Database\ChosingColumnsForm.Designer.cs">
       <DependentUpon>ChosingColumnsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Database\ColumnList.cs" />
+    <Compile Include="Database\DateFilter.cs" />
     <Compile Include="Database\FilterControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
